Downgrade na MC 1.21.4 - obnovuji API kompatibilitu